--- a/src/index.css
+++ b/src/index.css
@@ -103,12 +103,16 @@ section {
 }
 body {
   line-height: 1;
-  background: #141415;
+  /* background: #141415; */
   color: #fff;
   display: flex;
   height: 100vh;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 960px) {
+    align-items: flex-start;
+  }
 }
 ol,
 ul {
